# gametheorysim

./: .gitmodules  CMakeLists.txt  README.md  genC.sh  genP.sh  genQ.sh
include/: sim.hpp
src/: main.cpp  sim.cpp
